--- a/dj1/dj1/templates/t1test.html
+++ b/dj1/dj1/templates/t1test.html
@@ -6,5 +6,10 @@
   </head>
   <body>
     <h1>this is {{number}} template named {{ temp_name }}.</h1>
+    <ul>
+      {% for name in name_set %}
+      <li>{{ name }}</li>
+      {% endfor %}
+    </ul>
   </body>
 </html>
