--- a/dj1/menu/templates/menu/index.html
+++ b/dj1/menu/templates/menu/index.html
@@ -13,20 +13,20 @@
             <table>
                 <tr>
                     <td>
-                        <a href="/menu"><img border="0" src="/menu/menuimage/lsclogo.jpg" alt="Home" witdh="45" height="45" /></a>
+                        <a href="/menu"><img border="0" src="/image/menuimage/lsclogo.jpg" alt="Home" witdh="64" height="64" /></a>
                     </td>
                     <td><strong>Lzo Sze Chuan Online Menu Presentation</strong></td>
                 </tr>
             </table>
         </div>
         <div id="menu" style="background-color:white;height:700px;width:200px;float:left;">
-            <iframe src="category/" width="820" height="695" frameborder="0" name="menuframe"></iframe>
+            <iframe src="category/" width="820" height="725" frameborder="0" name="menuframe"></iframe>
         </div>
         <div id="container" style="background-color:white;height:700px;width:824px;float:left;">
-          <iframe src="category/1/" width="820" height="695" frameborder="0" name="myframe"></iframe>
+            <iframe src="category/1/" width="820" height="725" frameborder="0" name="myframe"></iframe>
         </div>
         <div id="footer" style="background-color:white;text-align:left;">
-            <p>这里是footer<a href="/menu">这是一个链接指向menu</a></p>
+            <p>Lao Sze Chuan, 152 S Brand Blvd., Glendale CA 91204 Tel: 818-552-8888</p>
         </div>
     </div>
 
